# twitch.py

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  todo.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pylint.yml  python-publish.yml
docs/: .readthedocs.yaml  CLIENT.md  EVENTS.md  mkdocs.yml  requirements.txt
docs/docs/: examples.md  index.md  questions.md  quickstart.md  setup.md
docs/docs/docs/: examples.md  index.md  quickstart.md
docs/docs/events/: custom.md  events.md  index.md  types.md
docs/docs/reference/: bot.md  classes.md  client.md  data-classes.md  debug.md  event-reference.md  exceptions.md  types.md
docs/overrides/: 404.html
examples/: advanced_oauth.py  advenced.py  authentication.py  automation.py  basic_bot.py  basic_client.py  basic_oauth.py  charity.py  custom_events.py  follow_alert.py  giveaways.py  hypetrain.py  overlay.py  replay.py  reward.py  simple.py
twitch/: __init__.py  alerts.py  auth.py  broadcaster.py  channel.py  chat.py  client.py  errors.py  gateway.py  goals.py  guest.py  http.py  message.py  moderation.py  poll.py  prediction.py  reward.py  state.py  stream.py  survey.py  user.py  utils.py
twitch/bot/: __init__.py  bot.py  gateway.py  state.py
twitch/ext/bot/: __init__.py  (+1 more)
twitch/types/: __init__.py  activity.py  alerts.py  analytics.py  bits.py  channel.py  channels.py  chat.py  gateway.py  http.py  interaction.py  message.py  moderation.py  poll.py  prediction.py  reward.py  scoopes.py  search.py  stream.py  streams.py  user.py  users.py
(+44 files in other folders)
